# mir

./: AGENTS.md  CMakeLists.txt  GNUmakefile  INSTALL.md  README.md  dialect_syntax.md  mir-bin-driver.c  mir-htab.h  mir.c  mir.h
.github/workflows/: AMD64-Linux-OSX-Windows-test.yml
basic/: CMakeLists.txt  abbrev.cfg  analyze_samples.py  run-benchmarks.sh  run-tests.sh
basic/docs/: README  TUTORIAL.md  bcg.md
basic/include/: basic_num.h  basic_num_ops.h  basic_runtime.h
basic/samples/: ahl_benchmark.bas  ahl_benchmark.out  array_default.bas  asin_acos.bas  base0.bas  baseconv2.bas  beep.bas  bool.bas  brescircle.out  circle.bas  codebreaker.out  colons.bas  def_fn.bas  eof.bas  escape.in  extern.bas  fib.out  fixed_demo.bas  fixed_demo.out  fixed_edge.bas  fixed_edge.out  fizzbuzz.bas  fleuves.bas  fn.bas  gosub.bas  graphics.bas  hamurabi.bas  hangman.bas  hangman.in  hangman.out  hgr2reset.out  hplot_bounds.bas  ifmulti.bas  let.out  life.out  mortgage.bas  normal.bas  onerror.bas  onerror.out  pi_builtin.bas  (+22 more)
basic/samples/bcg/: roulette.bas
basic/src/: AGENTS.md  arena.c  basic_common.h  basic_emit_num_const.h  basic_fixed64_common.c  basic_fixed64_hooks.c  basic_fixed64_hooks.h  basic_num.c  basic_num_double.c  basic_num_fixed64.c  basic_num_hooks.h  basic_num_long_double.c  basic_num_mb5.c  basic_num_ops.c  basic_pool.c  basic_pool_test.c  basic_runtime.c  basic_runtime_double.c  basic_runtime_fixed64.c  basic_runtime_fixed64.h  basic_runtime_resolve.c  basic_runtime_shared.h  basicc.c  basicc_core.c  basicc_fixed64.c
basic/src/kitty/: kitty.c  kitty.h  lodepng.c
basic/src/ryu/: f2s.c  ld2s.c
basic/test/: basic_ctx_fixed64_mir_test.c  basic_fixed_array_test.c  basic_handle_fixed64_test.c  basic_handles_fixed64_test.c  basic_input_hash_test.c  basic_num_array_align_test.c  basic_num_array_align_test.out  basic_num_fixed64_test.c  basic_num_mode_switch_test.c  basic_num_scan_test.c  basic_pool_test.c  basic_prng128_test.c  basic_runtime_lowmem_test.c  basic_runtime_lowmem_test.out  basic_system_fix_test.c  basic_system_test.c  dfp_test.c  extlib.c  fixed64_test.c  hcolor_test.c  hcolor_test.out  incdec.bas  kitty_test.c  ld2s_test.c  mir_runtime_fix.bas  parse_helpers_test.c  run-mbasic-tests.sh
basic/tests/: run-tests.sh
basic/tests/expected/: ahl_benchmark.out  align.out  bitops.out  date.out  funcproc.out  io.out  log.out  pi.out  prec53.out  random.out  repl-eval-print.out  strfuncs.out
basic/tests/expected/fixed64/: P019.out  ahl_benchmark.out  convert.out  pow.out  random.out  strfuncs.out  vtab.out
basic/tests/expected/ld/: abs_sgn.out  arith.out  chain.out  hamurabi.out  input_prompt.out  log.out  on.out  pi.out  prec53.out  print_tab.out  random.out  repl-abbrev.out  repl-eval-list-stmt.out  repl-load.out
basic/tests/inputs/: baseconv.in  datediff.in  string.in
basic/tests/programs/: P019.bas  abs_sgn.bas  align.bas  arith.bas  array_idx.bas  array_oob_read.bas  base0_cli.bas  base1_cli.bas  chain.bas  cmp.bas  convert.bas  data_string.bas  date.bas  hamurabi.bas  if_block.bas  ifendif.bas  input_array.bas  input_multi.bas  input_prompt.bas  instr.bas  io.bas  loop.bas  mir_demo.bas  on.bas  pi.bas  prec53.bas  print_tab.bas  random.bas  relop.bas  rem_nospace.bas  restore.bas  strfuncs.bas  sudoku.bas
examples/basic/: README  TUTORIAL.md  adder.bas  arena.c  arena.h  array.bas  array_oob_write.bas  asin_acos.out  base1.bas  baseconv.bas  baseconv.in  baseconv.out  basic_arena.c  basic_arena.h  basic_arena_test.c  (+115 more)
mir-tests/: helper-bitmap.c
(+8 files in other folders)
